--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,21 +3,21 @@
 
     <string name="app_name">TalktoDeaf</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_splash_screen">SplashScreen</string>
-    <string name="title_activity_action_category">ActionCategory</string>
-    <string name="title_activity_speak_category">SpeakCategory</string>
-    <string name="title_activity_game">Game</string>
-    <string name="title_activity_information">information</string>
-    <string name="title_activity_action_vocabulary">ActionVocabulary</string>
-    <string name="title_activity_action_vocabulary_detail">ActionVocabularyDetail</string>
-    <string name="title_activity_speak_vocabulary">SpeakVocabulary</string>
-    <string name="title_activity_speak_vocabulary_detail">SpeakVocabularyDetail</string>
-    <string name="title_activity_book_info">BookInfo</string>
-    <string name="title_activity_book_detail">BookDetail</string>
-    <string name="title_activity_place_info">PlaceInfo</string>
-    <string name="title_activity_place_detail">PlaceDetail</string>
-    <string name="context_menu">Context menu</string>
+    <string name="action_settings">ตั้งค่า</string>
+    <string name="title_activity_splash_screen"></string>
+    <string name="title_activity_action_category">หมวด</string>
+    <string name="title_activity_speak_category">หมวด</string>
+    <string name="title_activity_game">เกมส์</string>
+    <string name="title_activity_information">ข้อมูล</string>
+    <string name="title_activity_action_vocabulary">คำศัพท์</string>
+    <string name="title_activity_action_vocabulary_detail">รายละเอียดคำศัพท์</string>
+    <string name="title_activity_speak_vocabulary">คำศัพท์</string>
+    <string name="title_activity_speak_vocabulary_detail">รายละเอียดคำศัพท์</string>
+    <string name="title_activity_book_info">ข้อมูลหนังสือ</string>
+    <string name="title_activity_book_detail">รายละเอียดหนังสือ</string>
+    <string name="title_activity_place_info">ข้อมูลสถานที่</string>
+    <string name="title_activity_place_detail">รายละเอียดสถานที่</string>
+    <string name="context_menu">เมนู</string>
     <string name="title_activity_main_fragment">MainFragment</string>
 
 </resources>
