--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,17 @@
     <string name="title_activity_place_detail">รายละเอียดสถานที่</string>
     <string name="context_menu">เมนู</string>
     <string name="title_activity_main_fragment">MainFragment</string>
+    <string name="title_activity_thin_download_manager_demo">ThinDownloadManagerDemo</string>
+
+
+    <string name="download1">Start Download1</string>
+    <string name="download2">Start Download2</string>
+    <string name="download3">Start Download3</string>
+    <string name="download4">Start Download4</string>
+
+    <string name="start_all">Start All</string>
+    <string name="cancel_all">Cancel All</string>
+
+    <string name="list_files">List /data/data/../files/ </string>
 
 </resources>
