Word Game & Answer @ Work

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="title_activity_splash_screen"></string>
     <string name="title_activity_action_category">หมวด</string>
     <string name="title_activity_speak_category">หมวด</string>
-    <string name="title_activity_game">เกมส์</string>
+    <string name="title_activity_game">เกม</string>
     <string name="title_activity_information">ข้อมูล</string>
     <string name="title_activity_action_vocabulary">คำศัพท์</string>
     <string name="title_activity_action_vocabulary_detail">รายละเอียดคำศัพท์</string>
