--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,6 @@ Quam libero nulla netus eu porta curae, ut nulla bibendum facilisis et urna sed,
     <string name="msg_android_trademark">Android is a trademark of Google Inc.</string>
     <string name="desc_about_app">About this app</string>
     <string name="title_activity_download">ดาว์นโหลด</string>
+    <string name="title_setting">Setting</string>
 
 </resources>
